bug fixing: horizontal scroll bar, calc errors, iPhone work width, footer space maybe

--- a/sass/_pbj-home.scss
+++ b/sass/_pbj-home.scss
@@ -32,6 +32,7 @@
   margin: 0;
   padding: 0;
   background: image-url('pbj-home-bg.png') bottom center repeat-x;
+  overflow: hidden;
   
   @include breakpoint(mama-bear) {
     min-height: 50em;
@@ -40,6 +41,58 @@
     min-height: 40em;
   }
 }
+
+.title-block{
+  font: 9em 'Novecento', 'Open Sans', sans-serif;
+  font-weight: bold;
+  color: $heading-text-color;
+  text-transform: uppercase;
+  text-align: center;
+  width: 90%;
+  position: absolute;
+  letter-spacing: 0.3em;
+  margin: 1.5em auto;
+  @include animate(bounceIn, 1s, 3s);
+
+  @include breakpoint(mama-bear) { 
+    font-size: .5em;
+    letter-spacing: 0.5em;
+    font-size: 5em;
+    margin-top: 2.5em;
+  }
+
+  @include breakpoint(baby-bear) { 
+    font-size: .3em;
+    letter-spacing: 0.5em;
+    font-size: 3em;
+    margin-top: 3em;
+  }
+}
+
+.super-title {
+  white-space: nowrap;
+  display: block;
+  position: relative;
+  padding: 0 0.5em;
+  border-bottom: solid 0.08em #FFFFFF;
+  margin: auto;
+  width: 4em;
+  text-shadow: .1em .1em 0 $main-text-color ;
+  filter: progid:DXImageTransform.Microsoft.DropShadow(offX=2,offY=2,color=000000);
+
+  &:last-child {
+    border: none;
+  }
+
+  @include breakpoint(mama-bear) { 
+    width: 5em;
+  }
+
+  @include breakpoint(baby-bear) { 
+    width: 5em;
+  }
+}
+
 
 .layer-12 { /* string blend */
   @include img-svg (pbj-home-layer-12);
